Split MapEliminator into two classes